--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "lint": "eslint --ignore-path .gitignore --fix ."
+    "lint": "eslint --ignore-path .gitignore --fix .",
+    "test": "./node_modules/mocha/bin/mocha --exit test/lifecycle.test.js test/integration/**/*.test.js"
   },
   "dependencies": {
     "@types/node": "^12.12.14",
@@ -20,22 +21,30 @@
     "joi": "^14.3.1",
     "joi-password-complexity": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "morgan": "~1.9.1",
     "mysql2": "^2.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "sqlite3": "^4.1.1",
     "typeorm": "^0.2.20",
     "web3": "^1.2.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
+    "chance": "^1.1.3",
     "eslint": "^6.7.1",
     "eslint-plugin-import": "^2.18.2",
     "lint-staged": "^9.5.0",
+    "mocha": "^6.2.2",
     "nodemon": "^2.0.1",
     "yorkie": "^2.0.0"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "pre-push": "npm run test"
   },
   "lint-staged": {
     "*.{js}": [
