--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "sinon": "^7.5.0",
     "sqlite3": "^4.1.1",
     "typeorm": "^0.2.20",
     "web3": "^1.2.4"
