--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,12 @@ services:
         build:
             context: .
         image: johnngugi/cryptowallet-server
-        # restart: on-failure
         env_file: .env
-        depends_on:
-            - db
         ports:
             - "3000:3000"
-        command: sh -c './wait-for -t 300 db:3306 -- npm run dev'
+        command: sh -c './wait-for -t 300 db:3306 -- npm run migrate && npm run dev'
+        depends_on:
+            - db
     db:
         image: mysql
         container_name: db
