--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         depends_on:
             - db
     db:
-        image: mysql
+        image: mysql:8.0.18
         container_name: db
         env_file: .env
         environment:
