Change mysql deployment persistence storage

--- a/deployment/deployments/mysql.yml
+++ b/deployment/deployments/mysql.yml
@@ -27,5 +27,6 @@ spec:
               mountPath: /var/lib/mysql
       volumes:
         - name: mysql-persistent-storage
-          persistentVolumeClaim:
-            claimName: mysql-pv-claim
+          gcePersistentDisk:
+            pdName: mysql-disk
+            fsType: ext4
