--- a/deployment/deployments/backend.yml
+++ b/deployment/deployments/backend.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: cryptowallet-server-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: cryptowallet-server
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: cryptowallet-server
-          image: johnngugi/cryptowallet-server
+          image: gcr.io/cryptowallet-261720/cryptowallet-server
           lifecycle:
             postStart:
               exec:
