--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
       - deploy:
           name: Deploy Application
           command: |
-            echo export IMAGE_TAG=gcr.io/${GOOGLE_PROJECT_ID}/${APP_NAME}
+            echo export IMAGE_TAG=gcr.io/${GOOGLE_PROJECT_ID}/${APP_NAME} >> $BASH_ENV
             sed -i.bak "s#gcr.io/${GOOGLE_PROJECT_ID}/${APP_NAME}#${IMAGE_TAG}#" deployment/deployments/backend.yml
             echo $GCLOUD_SERVICE_KEY | base64 --decode --ignore-garbage > ${HOME}/gcloud-service-key.json
             gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
